syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "LicenseProto";
option java_package = "com.miraclekang.clouddemo.infrastructure.grpc.access";

import "google/protobuf/struct.proto";

service TenantLicenseService {
    rpc isTenantLicense (TenantId) returns (google.protobuf.Value) {
    }
}

message TenantId {
    string id = 1;
}