syntax = "proto3";

option java_package = "com.miraclekang.clouddemo.infrastructure.grpc";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;

message IdentityRequest {
    string id = 1;
}

message IdentityResponse {
    string id = 1;
}